# frzscr

./: .gitignore  LICENSE  README.md  common.h  frzscr.1  frzscr.c  meson.build  screenshot.c  screenshot.h  shm.c  shm.h  utils.c  utils.h  wayland.c  wayland.h  window.c  window.h
protocols/: meson.build
src/: common.h  config.c  config.h  frzscr.c  overlay.c  overlay.h  screenshot.c  screenshot.h  shm.c  shm.h  utils.c  utils.h  wayland.c  wayland.h  wayland.h.orig  window.c  window.c.orig  window.h  window.h.orig
